overlays/dev/backend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: sandpit
      namespace: istio-ingress
  hostnames:
    - dev-backend-info.sand.pit.im
  rules:
    - backendRefs:
        - name: backend
          port: 9898
