overlays/dev/backend-serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: backend
  namespace: dev
spec:
  hosts:
    - dev-backend-info.sand.pit.im
  ports:
    - number: 80
      name: http
      protocol: HTTP
      targetPort: 9898
  resolution: DNS
  endpoints:
    - address: backend.dev.svc.cluster.local
