overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: sandpit
      namespace: istio-ingress
  hostnames:
    - dev-info.sand.pit.im
  rules:
    - backendRefs:
        - name: frontend
          port: 9898
